--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
     "rules": {
         "react/jsx-uses-react": "error",
         "react/jsx-uses-vars": "error",
-        "indent": ["error", 2, {"ignoredNodes": ["JSXElement"]}],
+        "indent": ["error", 2, {"ignoredNodes": ["JSXElement"], "SwitchCase": 1}],
         "react/jsx-indent": ["error", 2],
         "no-tabs": 0
 
