--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "express": "^4.17.1",
     "images-upload-middleware": "^1.1.1",
     "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.14",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-date-range": "^1.0.0-beta",
     "react-dom": "^16.8.6",
+    "react-image": "^2.1.3",
     "react-images-uploader": "^1.2.0-rc1",
+    "react-loading-image": "^0.5.0",
     "react-moment": "^0.9.2",
     "react-progress-button": "^5.1.0",
     "react-redux": "^7.1.0",
