--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
+    "bootstrap": "^4.3.1",
     "cors-prefetch-middleware": "^1.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
@@ -18,8 +19,11 @@
     "react-dom": "^16.8.6",
     "react-image": "^2.1.3",
     "react-images-uploader": "^1.2.0-rc1",
+    "react-js-pagination": "^3.0.2",
     "react-loading-image": "^0.5.0",
     "react-moment": "^0.9.2",
+    "react-paginate": "^6.3.0",
+    "react-paginating": "^1.3.0-hook.2",
     "react-progress-button": "^5.1.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
