--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.14",
     "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-date-range": "^1.0.0-beta",
     "react-dom": "^16.8.6",
@@ -40,7 +41,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint . --ext .js --fix"
+    "eslint": "eslint ./src --ext .js --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
